[gd_scene load_steps=7 format=2]

[ext_resource path="res://Attacks/DullAttacks/DullJevil/dull_jevil.gd" type="Script" id=1]
[ext_resource path="res://player/HeartArea/heart.tscn" type="PackedScene" id=2]
[ext_resource path="res://team_stats/Spamton/Spamton.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 830, 360, 0, 0, 0, 0, 700, 380, 0, 0, 0, 0, 450, 380 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 830, 340, 0, 0, 0, 0, 690, 200, 0, 0, 0, 0, 440, 200 )
}

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 840, 180, 0, 0, 0, 0, 523.966, 185.514, 60.7285, -13.9007, -60.7285, 13.9007, 380, 200, -5.4394, -41.7021, 5.4394, 41.7021, 297.581, 290, -62.8781, -34.4495, 62.8781, 34.4495, 380, 390, -37.082, 8.46129, 37.082, -8.46129, 658.017, 409.266, 0, 0, 0, 0, 840, 180 )
}

[node name="DullJevil" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 510, 300 )

[node name="BorderField" type="ColorRect" parent="."]
margin_left = 440.0
margin_top = 180.0
margin_right = 880.0
margin_bottom = 468.0
rect_scale = Vector2( 0.575974, 0.784753 )

[node name="Field" type="ColorRect" parent="BorderField"]
margin_left = 7.0
margin_top = 7.0
margin_right = 432.0
margin_bottom = 281.0
color = Color( 0, 0, 0, 1 )

[node name="Heart" parent="." instance=ExtResource( 2 )]
position = Vector2( 510, 290 )

[node name="Spamton" parent="." instance=ExtResource( 4 )]
position = Vector2( 860, 370 )

[node name="BulletSpawnTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Down" type="Path2D" parent="."]
position = Vector2( -10, 10 )
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Down"]
position = Vector2( 830, 360 )
rotation = 2.98893
loop = false

[node name="Up" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="Up"]
position = Vector2( 830, 340 )
rotation = -2.35617
loop = false

[node name="KnifePath" type="Path2D" parent="."]
position = Vector2( -40, 30 )
scale = Vector2( 1.12459, 0.879624 )
curve = SubResource( 3 )

[connection signal="timeout" from="BulletSpawnTimer" to="." method="_on_BulletSpawnTimer_timeout"]
